优化基础接口定义和swagger文档
